[gd_scene load_steps=5 format=3 uid="uid://ml6tl8m87613"]

[ext_resource type="FontFile" uid="uid://cc30qdd0p2cgs" path="res://Fonts/Gluten-Bold.ttf" id="1_dfuqb"]
[ext_resource type="Script" path="res://CreationProcessSelection.gd" id="1_rw4no"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h67ig"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_k7a2x"]
base_font = ExtResource("1_dfuqb")

[node name="CreationProcessSelection" type="Panel"]
offset_right = 800.0
offset_bottom = 450.0
theme_override_styles/panel = SubResource("StyleBoxFlat_h67ig")
script = ExtResource("1_rw4no")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -182.0
offset_right = 141.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Default" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Default"

[node name="Custom" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Custom"

[node name="Copy" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Copy
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -271.0
offset_top = 16.0
offset_right = 272.0
offset_bottom = 76.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.8, 1, 0.847059, 1)
theme_override_fonts/font = SubResource("FontVariation_k7a2x")
theme_override_font_sizes/font_size = 41
text = "Select Creation Process"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 9.0
offset_right = 77.0
offset_bottom = 49.0
text = "Back"

[connection signal="button_down" from="VBoxContainer/Default" to="." method="_on_default_button_down"]
[connection signal="button_down" from="VBoxContainer/Custom" to="." method="_on_custom_button_down"]
[connection signal="button_down" from="VBoxContainer/Copy" to="." method="_on_copy_button_down"]
[connection signal="button_down" from="Back" to="." method="_on_back_button_down"]
